Various small visual bug fix
Fix banner height

Shorter text on mobile and keep track of the banner height if it change

Fix navigation size glitch

Where the nav menu didn't fit under a 784px

--- a/themes/inbeat/assets/scss/partials/_banner.scss
+++ b/themes/inbeat/assets/scss/partials/_banner.scss
@@ -24,9 +24,26 @@
             font-size: 12px;
         }
         text-align: center;
+
+        .desktop-text {
+          display: block;
+        }
+        
+        .mobile-text {
+          display: none;
+        }
+        
+        @media screen and (max-width: 48rem) {
+          .desktop-text {
+            display: none;
+          }
+        
+          .mobile-text {
+            display: block;
+          }
+        }
     }
     .hide{
-        transform: translateY(-100%);
         opacity: 0;
     }
 }
